# OmniConv

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  __init__.py  ai_task.py  api.py  config_flow.py  const.py  conversation.py  entity.py  exceptions.py  hacs.json  helpers.py  manifest.json  prompt.py  pyproject.toml  services.py  services.yaml  strings.json
custom_components/extended_openai_conversation/: __init__.py  api.py  config_flow.py  const.py  conversation.py  exceptions.py  helpers.py  manifest.json  services.py  services.yaml
custom_components/extended_openai_conversation/translations/: en.json
custom_components/omniconv/: __init__.py  api.py  config_flow.py  const.py  conversation.py  exceptions.py  manifest.json  services.yaml
examples/component_function/17track/: README.ko.md  README.md
examples/component_function/grocy/: README.md
examples/component_function/o365/: README.md
examples/component_function/ytube_music_player/: README.md
examples/function/area/: README.md
examples/function/attributes/: README.md
examples/function/automation/: README.ko.md  README.md
examples/function/calendar/: README.md
examples/function/camera_image_query/: README.md
examples/function/energy/: README.md
examples/function/google_search/: README.md
merge-plan/: README.md  config_flow.py  const.py  conversation.py  implementation_plan.md  services.py
tests/: conftest.py  test_config_flow.py  test_conversation.py  test_tools.py
tools/: __init__.py  composite.py  rest.py  script.py  service.py  template.py
translations/: en.json
(+13 files in other folders)
