[project]
name = "omniconv"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13.2"
dependencies = []

[dependency-groups]
dev = [
    "homeassistant@git+https://github.com/home-assistant/core.git@dev",
    "voluptuous",
    "PyYAML",
    "beautifulsoup4",
    "openai",
    "python-slugify",
    "voluptuous-openapi",
    "pytest",
    "pytest-asyncio",
    "hassil",
    "home-assistant-intents",
]

[tool.uv]
default-groups = ["dev"]

[tool.black]
line-length = 120
preview = true
target-version = ['py313']

[tool.isort]
profile = "black"


[tool.ruff]
line-length = 120
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "W", "PLC", "PLE", "PLW", "FLY", "RUF"]
